# zzRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  GLTFLoader.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  README.md  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderSystem.cpp  ShaderSystem.hpp  ShaderUniform.cpp  ShaderUniform.hpp  Texture.cpp  Texture.hpp  Vertex3.hpp  zzUtil.cpp  zzUtil.hpp
meshes/: BoxInterleaved.gltf
meshes/Terrain/: Terrain.gltf
shaders/basic/: basic.fs  basic.vs
shaders/basic_textured/: basic_textured.fs  basic_textured.vs
